# ProcessingTutorials

./: .gitattribute  .gitignore  .gitmodules  CONTRIBUTING.md  HttpServing.sh  README.md  clean.sh  cmake.sh  lines.sh  meson.sh  subReinit.sh  valgrind.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: notes-wsl.txt
doc/24-11-18/: test-1.log.txt
doc/gcc-defines/: gcc-arm-gnueabihf.txt.sorted  gcc-arm-noneeabi.txt.sorted  gcc-mingw.txt.sorted  gcc-native-mingw-gnueabi.txt.sorted  gcc-native.txt.sorted  notes-gcc-defines.txt
doc/system/: class-Processing_abstract.pu  class-Processing_detailed.pu  core-dependencies.pu  definition-life.pu  recursion.pu  replacing.pu  stm32-uart.pu  stm32-uart_2.pu  stm32-uart_3.pu
doc/system/FileExecuting/: build.sh  fe-fork.pu  fe-io.pu  fe-parent-child-connection.pu  fe-parent-child-connection_2.pu  fe-pipe.pu  fe-sinks.pu  fe-sources.pu
doc/system/TcpListening/: sockets-ipv4-ipv6.pu
doc/system/environment/: env-sit-1.pu
docker/: Dockerfile  build.sh  clear.sh  run.sh
docker/tools/: entry.sh
t01_hello-world/: CMakeLists.txt  Makefile  README.md  Supervising.cpp  main.cpp  meson.build
t01_tcp-echo-server/: CMakeLists.txt  Makefile  README.md  Supervising.cpp  Supervising.h  UserInteracting.cpp  UserInteracting.h  main.cpp  meson.build
t02_t01_logs/: main.cpp
t03_t02_initialize/: CMakeLists.txt  Makefile  main.cpp  meson.build
t04_t03_service/: Supervising.cpp
t05_t04_process-tree/: Supervising.cpp
t06_t05_monitoring/: meson.build
t07_t06_pregnancy/: Supervising.h  meson.build
t08_t07_new-child/: CMakeLists.txt  meson.build
t09_t08_child-succeeded/: Makefile
t09_t08_child-succeeded-result-consumed/: CntSecIncrementing.h  Supervising.cpp
t10_t09_child-repelled/: Supervising.cpp  Supervising.h  main.cpp
t11_t10_multithreading/: CntSecIncrementing.cpp
t12_t11_recursion/: CntSecIncrementing.cpp  CntSecIncrementing.h  Supervising.cpp  main.cpp
t1_hello-world/: Makefile  README.md  cmake.sh  main.cpp  meson.sh
t2_logs/: Makefile  Supervising.cpp  main.cpp  meson.build
t2_t1_logs/: Supervising.h  main.cpp  meson.build
t3_t1_initialize/: meson.build
t3_t2_initialize/: Supervising.cpp  Supervising.h  build.sh
t4_t3_service/: ninja.sh
t5_t4_process-tree/: Supervising.cpp  main.cpp  meson.build  meson.sh
t6_t5_monitoring/: CMakeLists.txt  Makefile  Project1.sln  Project1.vcxproj  Supervising.cpp  Supervising.h  main.cpp  meson.build
t7_t6_pregnancy/: CMakeLists.txt  Makefile  Project1.vcxproj  Supervising.cpp  Supervising.h
t8_t7_new-child/: CntSecIncrementing.cpp  CntSecIncrementing.h
t9_t8_child-succeeded/: Supervising.cpp  Supervising.h  meson.build
tools/docker/: Dockerfile
